...
            </objects>
            <point key="canvasLocation" x="-1390" y="-17"/>
        </scene>
        <!--Погода-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Погода" id="BYZ-38-t0r" customClass="MainViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Добавить новый город" translatesAutoresizingMaskIntoConstraints="NO" id="UqV-TJ-rkd">
                                <rect key="frame" x="0.0" y="155" width="393" height="56"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="oyk-4F-0tK"/>
                                </connections>
                            </searchBar>
...
